# waylandwebstream-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.builder  IMPLEMENTATION_PLAN.md  Justfile  PERFORMANCE.md  PERF_TODO.md  README.md  RENDERING_BUG.md  STATUS.md  TESTING.md  TEST_RESULTS.md  TODO.md  UI_REWRITE_PLAN.md  build.rs  nfpm.yaml  performance-2.md  run_integration_test.sh  rustfmt.toml  test_compositor.sh
.github/workflows/: ci.yml  release.yml  test.yml
dists/trixie/: InRelease  Release  Release.gpg
dists/trixie/main/binary-amd64/: Packages
docs/: apt-repo.md  hardware-acceleration-plan.md  native-client-plan.md
native-client/: Cargo.toml
native-client/src/: lib.rs  main.rs  proto.rs  types.rs
native-client/src/audio/: mod.rs
native-client/src/decode/: mod.rs  sw.rs
native-client/src/display/: mod.rs
native-client/src/input/: keymap.rs  mod.rs
native-client/src/latency/: mod.rs
native-client/src/render/: egl.rs  mod.rs  shm.rs
native-client/src/transport/: mod.rs  websocket.rs
native-client/tests/: smoke_e2e.rs
packaging/: KEY.gpg
packaging/nfpm/: postinstall.sh
packaging/systemd/: waylandwebstream.service
pool/main/w/waylandwebstream/: waylandwebstream_0.1.0_amd64.deb
src/: adaptive_bitrate.rs  clipboard.rs  config.rs  latency.rs  lib.rs  main.rs  proto.rs  server.rs  session.rs
src/audio/: mod.rs
src/compositor/: gl.rs  input.rs  mod.rs  state.rs
src/encoder/: frame.rs  mod.rs  vaapi.rs
src/input/: keyboard.rs  mod.rs  mouse.rs  touch.rs
src/web/: client.html  mod.rs
src/webrtc/: mod.rs  rtp.rs  session.rs  signaling.rs  turn_server.rs
tests/: adaptive_bitrate_test.rs  audio_capture.js  cage_rendering_test.rs  cursor_capture.js  cursor_test.rs  integration_test.rs  keyboard_focus_loss_capture.js  keyboard_focus_loss_test.rs  keyboard_latency_capture.js  keyboard_latency_test.rs  latency_websocket_test.rs  mouse_latency_capture.js  mouse_latency_test.rs  package.json  render_pixels_test.rs  stream_capture.js  touch_latency_capture.js  touch_latency_test.rs  validate_screenshot.js  webrtc_capture.js
tests/common/: mod.rs
wayland-test-client/: Cargo.toml
wayland-test-client/src/: cursor_client.rs  keyboard_client.rs  main.rs  payload_client.rs  pointer_client.rs  touch_client.rs
wayland-test-client/tests/: resize_e2e.rs  smoke_e2e.rs
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.svelte  app.css
web/src/components/: ClipboardToggleButton.svelte  FullscreenButton.svelte  KeyboardToggleButton.svelte  NativeResolutionButton.svelte  OnScreenKeyboard.svelte  SidePanel.svelte  Stage.svelte  StatsPanel.svelte
web/src/lib/: audio.test.ts  audio.ts  backoff.test.ts  backoff.ts  client.test.ts  client.ts  clipboard.test.ts  clipboard.ts  control.test.ts  control.ts  fakeWebSocket.ts  glRenderer.test.ts  glRenderer.ts  input.test.ts  input.ts  persisted.test.ts  persisted.ts  protocol.test.ts  protocol.ts  rectCache.test.ts  rectCache.ts  softKeyboard.test.ts  softKeyboard.ts  stats.ts  stream.test.ts  stream.ts  videoClient.ts  videoWorker.ts  videoWorkerMessages.ts  viewport.test.ts  viewport.ts
