[workspace]
members = [".", "wayland-test-client"]

[package]
name = "waylandwebstream"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "A single-binary headless Wayland compositor that streams to browsers over WebSocket/WebCodecs"
authors = []

[dependencies]
# Compositor
smithay = { version = "0.7", default-features = false, features = ["wayland_frontend", "renderer_pixman", "desktop"] }

# Video encoding
ffmpeg-next = "8.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1.0"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
users = "0.11"
