[workspace]
members = [".", "native-client", "wayland-test-client"]

[package]
name = "waylandwebstream"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "A single-binary headless Wayland compositor that streams to browsers over WebSocket/WebCodecs"
authors = []

[dependencies]
# Compositor
smithay = { version = "0.7", default-features = false, features = ["wayland_frontend", "renderer_pixman", "desktop", "renderer_gl", "backend_egl", "backend_gbm"] }

# Video encoding
ffmpeg-next = "8.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture and encoding
pipewire = "0.10"
opus = "0.3"

# Utilities
anyhow = "1"
thiserror = "1.0"
futures-util = "0.3"
rust-embed = { version = "8.11.0", features = ["mime-guess"] }
base64 = "0.22"

# Clipboard bridge: a data-control client of the nested compositor (the DE we
# host) so the browser can sync the clipboard without a separate daemon. See
# src/clipboard.rs. ext-data-control covers KDE6 / GNOME>=49 / modern wlroots /
# labwc / COSMIC.
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
calloop = "0.14"
calloop-wayland-source = "0.4"
os_pipe = { version = "1.1", features = ["io_safety"] }
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
users = "0.11"
