[package]
name = "native-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Native Wayland client for the waylandwebstream /client endpoint -- diagnostic counterpart to the browser client"

[[bin]]
name = "wws-client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }