[package]
name = "native-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Native Wayland client for the waylandwebstream /client endpoint -- diagnostic counterpart to the browser client"

[[bin]]
name = "wws-client"
path = "src/main.rs"

# Library target so integration tests under tests/ can drive the
# same code paths the binary uses. The binary still has its own
# `mod decode; mod display; mod transport; mod types;` declarations
# -- they shadow the lib here, which is fine because we only need
# the modules to be importable by tests/, not to share code with the
# binary.
[lib]
name = "native_client"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

# Wayland client + standard protocols. Phase 4 needs xdg-shell; later
# phases add wl_shm, wp_* etc.  The `system` feature enables the
# libwayland-client.so backend so we can extract raw wl_display* /
# wl_surface* pointers for EGL (Phase 9).
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols = { version = "0.32", features = ["client"] }

# memfd_create for the placeholder wl_shm buffer. Phase 4 attaches a
# single solid-color buffer so the surface is actually mapped (without
# a buffer the compositor never shows the window); Phase 5+ replaces
# this with a real SW decoder-fed renderer.
libc = "0.2"

# H.264 -> ARGB8888 decoder + swscale for Phase 5. Version pinned to
# match the server (src/encoder/mod.rs) so the wire format and decoder
# agree on H.264 profile/level without a separate feature-flag dance.
ffmpeg-next = "8.1"

# Audio decode + playback for Phase 6. Versions pinned to the server's
# deps (root Cargo.toml) so the Opus format and PipeWire API are
# consistent.
opus = "0.3"
pipewire = "0.10"

# EGL renderer (Phase 9). wayland-egl 0.32 is the companion crate to
# wayland-client 0.31 (same smithay release train).
wayland-egl = "0.32"