[package]
name = "wayland-test-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wayland-test-client"
path = "src/main.rs"

[[bin]]
name = "wayland-touch-client"
path = "src/touch_client.rs"

[[bin]]
name = "wayland-pointer-client"
path = "src/pointer_client.rs"

[[bin]]
name = "wayland-keyboard-client"
path = "src/keyboard_client.rs"

[[bin]]
name = "wayland-cursor-client"
path = "src/cursor_client.rs"

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
memmap2 = "0.9"
tempfile = "3"
